# data-diff-ext

./: README.md  meltano.yml  pyproject.toml
data_diff_ext/: __init__.py  extension.py  main.py  pass_through.py
